<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_order">

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.sewingandclothing.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.example.sewingandclothing.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.sewingandclothing.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sewingandclothing.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_collection_details"
        android:name="com.example.sewingandclothing.ui.collectionDetails.CollectionDetailsFragment"
        android:label="@string/title_collection_details"
        tools:layout="@layout/fragment_collection_details"/>

    <fragment
        android:id="@+id/navigation_order_list"
        android:name="com.example.sewingandclothing.ui.orderList.OrderListFragment"
        android:label="@string/title_order_list"
        tools:layout="@layout/fragment_order_list"/>

</navigation>
