<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cardViewRegister">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:layout_margin="15dp"
                android:layout_below="@id/textInputUsernameRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                app:endIconMode="password_toggle"
                android:layout_below="@id/textInputEmailRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvUserVsSeamstress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_seamstress"
                android:textStyle="bold|italic"
                android:textSize="16sp"
                android:maxLines="2"
                android:layout_below="@id/textInputPasswordRegister"
                android:layout_alignStart="@id/textInputPasswordRegister"/>

            <Spinner
                android:id="@+id/spinnerUserSeamstress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/spinnerStyle"
                android:spinnerMode="dropdown"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tvUserVsSeamstress" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="1dp"
                android:layout_below="@id/spinnerUserSeamstress"
                android:layout_alignStart="@id/textInputPasswordRegister"
                android:layout_alignEnd="@id/textInputPasswordRegister" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>